# baremetalisp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  link.ld
.github/workflows/: main.yml
asm/: aarch64.S  aarch64.s  x86_64.s
csrc/: Makefile  gpio.h  lfb.c  lfb.h  lib.c  mbox.c  mbox.h  mmu.c  uart.c  uart.h
docker/: Dockerfile  README.md  docker-compose.yml  zshenv  zshrc
kernel/: Cargo.toml  Makefile  link.ld
kernel/asm/: aarch64.S  boot.S  cache_helper.S  exception.S  optee_smc.h  smc64.S  teesmc_optee.h
kernel/asm/device/: pine64.S  raspi.S
kernel/src/: allocator.rs  bits.rs  boot.rs  bsp.rs  cpuint.rs  el0.rs  el1.rs  el2.rs  el3.rs  global.rs  init.lisp  int.rs  kernel.rs  lib.rs  mmio.rs  out.rs  pager.rs  paging.rs  parser.rs  print.rs  process.rs  semantics.rs  slab.rs  smc.rs  splash.rs  syscall.rs  thread.rs  tty.rs  userland.rs
kernel/src/aarch64/: bits.rs  cache.rs  context.rs  cpu.rs  delays.rs  el.rs  exception.rs  helper.rs  int.rs  lock.rs  mmu.rs  mod.rs  smc.rs  syscall.rs
kernel/src/aarch64/cortex/: a53.rs  mod.rs
kernel/src/bsp/: allwinner.rs  delays.rs  int.rs  memory.rs  raspi.rs  uart.rs
kernel/src/bsp/allwinner/: memory.rs
kernel/src/bsp/raspi/: int.rs  memory.rs
kernel/src/driver/: defs.rs  delays.rs  gic.rs  int.rs  mbox.rs  memory.rs  mhu.rs  mod.rs  psci.rs  rand.rs  setup.rs  topology.rs  tzc380.rs  uart.rs
kernel/src/driver/arm/: mod.rs  scpi.rs
kernel/src/driver/arm/gic/: mod.rs
kernel/src/driver/arm/gic/v2/: mod.rs
kernel/src/driver/delays/: bcm2xxx.rs  generic.rs
kernel/src/driver/device/: mod.rs
kernel/src/driver/device/a64/: cpu.rs  mbox.rs  memory.rs  mod.rs  psci.rs  uart.rs
kernel/src/driver/device/allwinner/: axp.rs  cpu.rs  defs.rs  mbox.rs  memory.rs  mhu.rs  mod.rs  power.rs  psci.rs  rsb.rs  security.rs  setup.rs  topology.rs  uart.rs
kernel/src/driver/device/bcm2711/: board.rs  delays.rs  mbox.rs  memory.rs  mod.rs  power.rs  uart.rs
kernel/src/driver/device/generic/: delays.rs  mod.rs
kernel/src/driver/device/raspi/: board.rs  defs.rs  delays.rs  graphics.rs  int.rs  mbox.rs  memory.rs  mod.rs  power.rs  psci.rs  rand.rs  setup.rs  toplogy.rs  topology.rs  uart.rs
kernel/src/driver/uart/: pl011.rs  sunxi_uart.rs
kernel/src/lang/: mod.rs  parser.rs  runtime.rs  semantics.rs
kernel/src/memalloc/: buddy.rs  mod.rs  slab.rs
kernel/src/process/: int.rs  mod.rs  ringq.rs  semaphore.rs
kernel/src/psci/: common.rs  cpu_off.rs  cpu_on.rs  data.rs  ep_info.rs  mod.rs  setup.rs  suspend.rs
kernel/src/tty/: handler.rs
misc/: config.txt
specification/: Makefile  language.md  typing.tex
src/: boot.rs  el0.rs  el1.rs  el2.rs  lib.rs  main.rs  parser.rs
src/aarch64/: delays.rs  el.rs  exception.rs  graphics.rs  lock.rs  mbox.rs  memory.rs  (+4 more)
(+10 files in other folders)
