[package]
name = "baremetalisp"
version = "0.1.0"
authors = ["Yuuki Takano <ytakano@wide.ad.jp>, Nobuyuki Kanaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blisp = { git = "https://github.com/ytakano/blisp.git" }
memalloc = { git = "https://github.com/ytakano/memalloc.git", branch = "main", features=["buddy_32m"] }
synctools = { git = "https://github.com/ytakano/synctools.git", branch = "main" }
num-bigint = { git = "https://github.com/ytakano/num-bigint.git", default-features = false, features = ["libm"] }
libm = "0.2.1"

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
crate-type = ["staticlib"]

[features]
raspi3 = []
raspi4 = []
pine64 = []
ERRATA_A75_764081 = []
