[package]
name = "baremetalisp"
version = "0.1.0"
authors = ["Yuuki Takano <ytakano@wide.ad.jp>, Nobuyuki Kanaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memalloc = { git = "https://github.com/ytakano/memalloc.git", branch = "main", features=["buddy_32m"] }
gic = { git = "https://github.com/ytakano/gic.git" }

[dependencies.blisp]
version = "0.3.8"

[dependencies.libm]
version = "0.2.1"

[dependencies.num-bigint]
version = "0.4.0"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[dependencies.synctools]
version = "0.1.0"

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
crate-type = ["staticlib"]

[features]
raspi3 = []
raspi4 = []
pine64 = []
ERRATA_A75_764081 = []
