[package]
name = "baremetalisp"
version = "0.1.0"
authors = ["Yuuki Takano <ytakano@wide.ad.jp>, Nobuyuki Kanaya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.2"
blisp = "0.4"
libm = "0.2.1"
synctools = "0.3"

[dependencies.memac]
version = "0.3"
default-features = false
features = ["buddy_32m"]

[dependencies.num-bigint]
version = "0.4.0"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
crate-type = ["staticlib"]

[features]
raspi3 = []
raspi4 = []
pine64 = []
ERRATA_A75_764081 = []
